syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "google/protobuf/timestamp.proto";

import "ci/proto/common.proto";
import "ci/proto/storage/common.proto";

message Check {
    string id = 1;
    int64 diff_set_id = 2;
    string owner = 3;
    google.protobuf.Timestamp created = 4;
    repeated string tags = 5;

    OrderedRevision left_revision = 6;
    OrderedRevision right_revision = 7;

    CheckType type = 8;
    string logbroker_topic = 9;
    CheckStatus status = 10;
    CheckInfo info = 11;

    map<string, string> attributes = 13;

    DistbuildPriority distbuild_priority = 14;

    Zipatch zipatch = 15; // Optional

    google.protobuf.Timestamp diff_set_event_created = 16;

    ci.common.CommitId autocheck_config_left_revision = 20;
    ci.common.CommitId autocheck_config_right_revision = 21;

}

enum CheckType {
    BRANCH_PRE_COMMIT = 0;
    BRANCH_POST_COMMIT = 1;
    TRUNK_PRE_COMMIT = 2;
    TRUNK_POST_COMMIT = 3;
}

enum ArchiveState {
    AS_NONE = 0;
    AS_ARCHIVING = 1;
    AS_ARCHIVED = 2;
}

message DistbuildPriority {
    int64 fixed_priority = 1;
    int64 priority_revision = 2;
}

message Zipatch {
    string url = 1;
    int64 base_revision = 2;
}

message LargeConfig {
    string path = 3; // path to delegated configuration, must be a.yaml
    OrderedRevision revision = 4; // path commit revision
}

message LargeAutostart {
    string path = 3; // path to configuration (could be a.yaml or config/branches/....yaml)
    string target = 1; // target path
    repeated string toolchains = 2; // list of toolchains (no toolchains means all)
}

message NativeBuild {
    string path = 1; // path to configuration (could be a.yaml or config/branches/....yaml)
    string toolchain = 2; // Single toolchain
    repeated string target = 3; // Multiple targets
}

message CheckInfo {
    repeated string fast_targets = 1;
    repeated string disabled_toolchains = 2;
    repeated string strong_modes = 3;
    repeated string strong_stages = 4;

    string message = 5;
    string not_recheck_reason = 6;
    string pessimization_info = 7;

    repeated LargeAutostart large_autostart = 8; // List of Large tests to start
    repeated NativeBuild native_builds = 10; // List of Native builds to start
    LargeConfig default_large_config = 9; // Default large tests configuration, only make sense for branches
}
